chore: rename IT tests to Acceptance tests